{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Test",
            "id": "636780f0-d701-4c7c-929e-9c54805b70a5",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "4fabaa3e-e93f-4329-8b6c-32342aa920ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "0aa95051-eb16-4fb6-9a8c-ee6796aa2091",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "5a5d2228-dfef-4b15-bf84-742f91ba8fa3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "1ac83dfd-00fa-4c05-8a14-9557894f8a15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "b34a68d7-1364-4eda-b7fa-ea3ed80e4c07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "e2d40a10-f68e-4800-9da9-814ba3f9acf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60882132-b77e-47fb-acbe-8d6b8385e1fd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "499422d4-f891-48f2-8605-8c533af40d3d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4668e260-4929-4b2b-b87d-a8c3c1dae415",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53cf6fb4-599e-4571-8385-e4f53737d197",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b655973-003c-4208-93d1-5f5a208bc7ec",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d195137-b8bf-4d83-bded-3ea05e9a79f8",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "aefeb0bf-4c9f-4cbd-a17f-1f337c69ce24",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "634d056e-b8ac-4b88-a987-c23922c9f914",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d69b1fb4-4fba-498b-a9a9-48be498b4409",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}